Terraform/main.tf



resource "aws_vpc" "vpc-terraform-test" {
  cidr_block       = "${var.aws-vpc-cidr-prefix}.0.0/16"
  instance_tenancy = "default"
  tags = {
    Name = var.aws-vpc-tag-name
  }
}

resource "aws_internet_gateway" "internet_gateway-terraform-test" {
  vpc_id     = aws_vpc.vpc-terraform-test.id
  depends_on = [aws_vpc.vpc-terraform-test]
  tags = {
    Name = var.aws-internet-gateway-tag-name
  }
}



resource "aws_route_table" "public-route_table-terraform-test" {
  vpc_id     = aws_vpc.vpc-terraform-test.id
  depends_on = [aws_vpc.vpc-terraform-test, aws_internet_gateway.internet_gateway-terraform-test]
  route {
    cidr_block = var.aws-route-cidr-any-ipv4
    gateway_id = aws_internet_gateway.internet_gateway-terraform-test.id
  }
  route {
    ipv6_cidr_block = var.aws-route-cidr-any-ipv6
    gateway_id      = aws_internet_gateway.internet_gateway-terraform-test.id
  }
  tags = {
    Name = var.aws-public-route-table-tag-name
  }
}

resource "aws_subnet" "public-subnet-terraform-test" {
  vpc_id            = aws_vpc.vpc-terraform-test.id
  depends_on        = [aws_vpc.vpc-terraform-test]
  availability_zone = "${var.aws-region}${var.aws-availability-zone-suffix}"
  cidr_block        = "${var.aws-vpc-cidr-prefix}.${var.aws-public-subnet-cidr-infix}.0/24"
  tags = {
    Name = var.aws-public-subnet-tag-name
  }
}

resource "aws_route_table_association" "public-route_table_association-terraform-test" {
  subnet_id      = aws_subnet.public-subnet-terraform-test.id
  route_table_id = aws_route_table.public-route_table-terraform-test.id
  depends_on     = [aws_vpc.vpc-terraform-test, aws_internet_gateway.internet_gateway-terraform-test, aws_subnet.public-subnet-terraform-test, aws_route_table.public-route_table-terraform-test]
}



resource "aws_route_table" "private-route_table-terraform-test" {
  vpc_id     = aws_vpc.vpc-terraform-test.id
  depends_on = [aws_vpc.vpc-terraform-test, aws_internet_gateway.internet_gateway-terraform-test]
  tags = {
    Name = var.aws-private-route-table-tag-name
  }
}

resource "aws_subnet" "private-subnet-terraform-test" {
  vpc_id            = aws_vpc.vpc-terraform-test.id
  depends_on        = [aws_vpc.vpc-terraform-test]
  availability_zone = "${var.aws-region}${var.aws-availability-zone-suffix}"
  cidr_block        = "${var.aws-vpc-cidr-prefix}.${var.aws-private-subnet-cidr-infix}.0/24"
  tags = {
    Name = var.aws-private-subnet-tag-name
  }
}

resource "aws_route_table_association" "private-route_table_association-terraform-test" {
  subnet_id      = aws_subnet.private-subnet-terraform-test.id
  route_table_id = aws_route_table.private-route_table-terraform-test.id
  depends_on     = [aws_vpc.vpc-terraform-test, aws_internet_gateway.internet_gateway-terraform-test, aws_subnet.private-subnet-terraform-test, aws_route_table.private-route_table-terraform-test]
}



resource "aws_security_group" "public-security_group-terraform-test" {
  name        = "public-security_group-terraform-test"
  description = "Allow TLS Inbound Traffic"
  vpc_id      = aws_vpc.vpc-terraform-test.id
  depends_on  = [aws_vpc.vpc-terraform-test]
  ingress {
    description      = "SSH"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
  ingress {
    description      = "HTTP"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
  ingress {
    description      = "TLS"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
  ingress {
    description      = "K8s NodePorts"
    from_port        = 30000
    to_port          = 32767
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = [aws_vpc.vpc-terraform-test.cidr_block, "127.0.0.0/24"]
    # ipv6_cidr_blocks = [aws_vpc.vpc-terraform-test.ipv6_cidr_block]
  }
  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
  tags = {
    Name = "public-security_group-terraform-test"
  }
}

resource "aws_security_group" "private-security_group-terraform-test" {
  name        = "private-security_group-terraform-test"
  description = "Allow ALL"
  vpc_id      = aws_vpc.vpc-terraform-test.id
  depends_on  = [aws_vpc.vpc-terraform-test]

  dynamic "ingress" {
    for_each = var.aws-security-group-ingress-any
    content {
      description      = "Allow Port ${ingress.value.from_port} to ${ingress.value.to_port} from ${join(",", ingress.value.cidr_blocks)} or ${join(",", ingress.value.ipv6_cidr_blocks)} on protocol ${ingress.value.protocol}"
      from_port        = ingress.value.from_port
      to_port          = ingress.value.to_port
      protocol         = ingress.value.protocol
      cidr_blocks      = ingress.value.cidr_blocks
      ipv6_cidr_blocks = ingress.value.ipv6_cidr_blocks
      self             = ingress.value.self
    }
  }

  # ingress {
  #   from_port        = 0
  #   to_port          = 0
  #   protocol         = "-1"
  #   cidr_blocks      = ["0.0.0.0/0"]
  #   ipv6_cidr_blocks = ["::/0"]
  # }
  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
  tags = {
    Name = "private-security_group-terraform-test"
  }
}



resource "aws_network_interface" "public-gw-network_interface-terraform-test" {
  subnet_id         = aws_subnet.public-subnet-terraform-test.id
  source_dest_check = var.aws-network-interface-k8s-master1-public-subnet-source-dest-check
  private_ips       = ["${var.aws-vpc-cidr-prefix}.${var.aws-public-subnet-cidr-infix}.${var.aws-network-interface-k8s-master1-public-subnet-private-ip1}"]
  security_groups   = [aws_security_group.public-security_group-terraform-test.id]
  depends_on        = [aws_vpc.vpc-terraform-test, aws_subnet.public-subnet-terraform-test, aws_security_group.public-security_group-terraform-test]
  tags = {
    Name = var.aws-network-interface-k8s-master1-public-subnet-tag-name
  }
}

resource "aws_network_interface" "private-gw-network_interface-terraform-test" {
  subnet_id         = aws_subnet.private-subnet-terraform-test.id
  source_dest_check = false
  private_ips       = ["10.0.10.123"]
  security_groups   = [aws_security_group.private-security_group-terraform-test.id]
  depends_on        = [aws_vpc.vpc-terraform-test, aws_subnet.private-subnet-terraform-test, aws_security_group.private-security_group-terraform-test]
  tags = {
    Name = "private-gw-network_interface-terraform-test"
  }
}

resource "aws_network_interface" "private-server-network_interface-terraform-test" {
  subnet_id         = aws_subnet.private-subnet-terraform-test.id
  source_dest_check = false
  private_ips       = ["10.0.10.222"]
  security_groups   = [aws_security_group.private-security_group-terraform-test.id]
  depends_on        = [aws_vpc.vpc-terraform-test, aws_subnet.private-subnet-terraform-test, aws_security_group.private-security_group-terraform-test]
  tags = {
    Name = "private-server-network_interface-terraform-test"
  }
}

resource "aws_eip" "public-gw-eip-terraform-test" {
  domain                    = "vpc"
  network_interface         = aws_network_interface.public-gw-network_interface-terraform-test.id
  associate_with_private_ip = "10.0.1.123"
  depends_on                = [aws_vpc.vpc-terraform-test, aws_network_interface.public-gw-network_interface-terraform-test]
  tags = {
    Name = "public-gw-eip-terraform-test"
  }
}









resource "aws_instance" "gw-ubuntu-20-instance-terraform-test" {
  ami               = data.aws_ami.k8s-ami.id
  instance_type     = var.k8s-master1-instance-type
  depends_on        = [aws_vpc.vpc-terraform-test, aws_network_interface.public-gw-network_interface-terraform-test, aws_network_interface.private-gw-network_interface-terraform-test]
  availability_zone = "${var.aws-region}${var.aws-availability-zone-suffix}"
  key_name          = var.aws-ec2-keypair-name
  network_interface {
    network_interface_id = aws_network_interface.public-gw-network_interface-terraform-test.id
    device_index         = 0
  }
  network_interface {
    network_interface_id = aws_network_interface.private-gw-network_interface-terraform-test.id
    device_index         = 1
  }
  root_block_device {
    delete_on_termination = var.k8s-master1-instance-root-block-device-delete-on-termination
    volume_size           = var.k8s-master1-instance-root-block-device-volume-size
    tags = {
      Name = var.k8s-master1-instance-root-block-device-tag-name
    }
  }
  user_data = <<EOF
#!/bin/bash
cd /home/ubuntu;sudo curl -fksSLO --retry 333 https://raw.githubusercontent.com/hendrychandra/aws-tf-bigip-k8s/main/Bash/K8s/VMWrapSingleNodeClusterApplicationService.sh;sudo chmod 777 /home/ubuntu/VMWrapSingleNodeClusterApplicationService.sh;sudo chown $(id -u):$(id -g) /home/ubuntu/VMWrapSingleNodeClusterApplicationService.sh;runuser -l ubuntu -c '/home/ubuntu/VMWrapSingleNodeClusterApplicationService.sh'
EOF
  tags = {
    Name = var.k8s-master1-instance-tag-name
  }
}









resource "aws_route53_record" "sub-domain" {
  depends_on = [aws_instance.gw-ubuntu-20-instance-terraform-test]
  zone_id    = data.aws_route53_zone.parent-domain.zone_id
  name       = "${var.subdomain-record-name}.${data.aws_route53_zone.parent-domain.name}"
  type       = var.subdomain-record-type
  ttl        = var.subdomain-record-ttl
  records    = [aws_instance.gw-ubuntu-20-instance-terraform-test.public_ip]
}
